--- a/layouts/partials/header-inner.html
+++ b/layouts/partials/header-inner.html
@@ -9,5 +9,5 @@
 			{{- with .Site.Params.Description }}<span class="description">{{ . }}</span>{{ end -}}
 		</a>
 	</h1>
-	{{ partialCached "header/nav.html" . }}
+	{{ partialCached "header-nav" . }}
 </div>
