--- a/layouts/partials/footer-inner.html
+++ b/layouts/partials/footer-inner.html
@@ -17,11 +17,11 @@
 		{{ end }}
 	{{ end }}
 
-	{{ if ne .Site.Params.show_social false }}{{ partial "social.html" . }}{{ end }}
+	{{ if ne .Site.Params.show_social false }}{{ partial "social" . }}{{ end }}
 
 	{{ with .Site.Copyright -}}
 		<div class="copyright">{{ . | safeHTML  }}</div>
 	{{- end }}
 	<!-- Last Modified: {{ now.Format "2006-01-02 15:04 MST" }} -->
-	{{ partialCached "footer/nav.html" . }}
+	{{ partialCached "footer-nav" . }}
 </div>
