--- a/layouts/partials/languages.html
+++ b/layouts/partials/languages.html
@@ -1,9 +1,9 @@
 {{ if .IsTranslated -}}
-<nav class="languages">
+<div class="languages">
 	<ul>
 		{{- range .AllTranslations -}}
 		<li><a href="{{ .RelPermalink }}" lang="{{ .Site.LanguageCode }}" class="{{ if eq $.Page.RelPermalink .RelPermalink }}active{{ end }}">{{ .Site.Language.LanguageName }}</a></li>
 		{{- end }}
 	</ul>
-</nav>
+</div>
 {{- end }}
