--- a/layouts/shortcodes/articles-list.html
+++ b/layouts/shortcodes/articles-list.html
@@ -17,7 +17,7 @@
 <summary data-tags=""><h2>{{ $title | plainify }}</h2><span class="more">({{ $articles_count }}){{ with $more }} & <a href="{{ . | safeHTMLAttr }}">{{ i18n "show-more" }}</a>{{ end }}</span></summary>
 <div class="wrapper">
 {{- range first $items $articles.ByDate.Reverse -}}
-			{{ partial "article.html" . }}
+			{{ partial "article" . }}
 {{- end -}}
 </div>
 </details>
