--- a/layouts/partials/header-nav.html
+++ b/layouts/partials/header-nav.html
@@ -1,14 +1,19 @@
 {{ if ne .Site.Params.Menu_main false }}
 <nav>
 	<ul>
-		{{- range .Site.RegularPages -}}
+		<!-- {{- range .Site.RegularPages -}}
 			{{ if and (eq .Section "") (ne .Params.menu_hide true) -}}
 			<li><a href="{{ .RelPermalink }}">{{ with .Title }}{{ . | title }}{{ else }}{{ .File.ContentBaseName | title }}{{ end }}</a></li>
 			{{- end }}
-		{{- end -}}
-		{{- $currentPage := . -}}
+		{{- end -}} -->
 		{{- range .Site.Menus.main -}}
-			<li><a href="{{ .URL }}">{{ (i18n .Name) }}</a></li>
+			<li class="{{ if .HasChildren }}has-children{{ end }}"><a href="{{ .URL }}">{{ (i18n .Name) }}</a>{{ if .HasChildren -}}
+				<ul>
+					{{- range .Children -}}
+						<li><a href="{{ .URL }}">{{ (i18n .Name) }}</a></li>
+					{{- end -}}
+				</ul>
+			{{- end -}}</li>
 		{{- end -}}
 	</ul>
 </nav>
