--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -43,7 +43,7 @@
 		</time>
 		<h3 class="title">{{ .Title }}</h3>
 		{{- with .Params.Author }}
-			<p class="author">{{ . }}</p>
+			<!-- <p class="author">{{ . }}</p> -->
 		{{- end -}}
 		<p class="summary">
 		{{- with .Description }}
