--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,8 +11,9 @@
 {{- end }}
 
 <link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}" media="all">
-<link rel="preload" href="{{ "/styles/syntax.css" | relURL }}" media="screen" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript><link rel="stylesheet" href="{{ "/styles/syntax.css" | relURL }}" media="screen"></noscript>
-<link rel="preload" href="{{ "/scripts/simple-lightbox/simple-lightbox.min.css" | relURL }}" media="screen" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript><link rel="stylesheet" href="{{ "/scripts/simple-lightbox/simple-lightbox.min.css" | relURL }}" media="screen"></noscript>
+<!-- load non essential style sheets, see https://timkadlec.com/remembers/2020-02-13-when-css-blocks/  -->
+<link rel="stylesheet" href="{{ "/styles/syntax.css" | relURL }}" media="print" onload="this.media='screen'">>
+<link rel="stylesheet" href="{{ "/scripts/simple-lightbox/simple-lightbox.min.css" | relURL }}" media="print" media="print" onload="this.media='screen'">
 
 {{ range .AlternativeOutputFormats -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
