--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -1062,9 +1062,8 @@ body > header nav li:hover ul {
 
 body > main {
 	position: relative;
-	/*margin-bottom: calc(6*var(--line-height));*/
-	margin-top: calc(2*var(--gutter-height) + 4*var(--line-height));
-	margin-bottom: 100vh;
+	margin-top: calc(var(--gutter-height) + 3*var(--line-height));
+	margin-bottom: calc(100vh + 3*var(--line-height));
 	padding: 0 var(--gutter-width);
 	min-height: 100vh;
 
@@ -1107,13 +1106,13 @@ body > footer .copyright {
 }
 
 
-body > footer nav ul {
-	margin: 0;
-	padding: 0;
+body > footer nav ul li {
+	display: inline-block;
+	margin: 0 0.5rem;
 }
 
 body > footer nav ul {
-	margin: 0;
+	margin: var(--line-height) 0 0;
 	padding: 0;
 	text-align: center;
 }
@@ -1134,7 +1133,6 @@ panel styles
 	top: 0;
 	flex-direction: column;
 	padding: var(--gutter-width);
-	padding-bottom: calc(3*var(--line-height));
 	min-height: 100vh;
 	max-width: 100vw;
 
@@ -1151,7 +1149,7 @@ panel styles
 	.panel:first-child {
 		/*--page-color-transparency: 1;*/
 		/*background: red;*/
-		/*min-height: calc(100vh - 2*var(--gutter-height) - var(--line-height));*/
+		min-height: calc(100vh - var(--gutter-height) - 3*var(--line-height));
 	}
 
 body > main:after,
