Renamed to onion

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{{ "<!-- Built with Hugo and the /xerographic theme. -->" | safeHTML }}
+{{ "<!-- Built with Hugo and the https://heracl.es/onion theme. -->" | safeHTML }}
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ end }}">
 <head>
 	<meta charset="UTF-8">
