Rename scripts according to theme

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,4 +1,5 @@
+<script src="{{ "/scripts/onion.js" | relURL }}" async></script>
+<!-- lightbox loaded from onion.js -->
 <!-- <script src="{{ "/scripts/simple-lightbox/simple-lightbox.min.js" | relURL }}" async></script> -->
-<script src="{{ "/scripts/xerographic.js" | relURL }}" async></script>
 <script src="{{ "/scripts/instantpage.js" | relURL }}" type="module" defer></script>
 {{ template "_internal/google_analytics_async.html" . }}
