--- a/layouts/partials/gadgets.html
+++ b/layouts/partials/gadgets.html
@@ -1,6 +1,6 @@
 <div class="gadgets">
-	<a id="totop" href="#top">↑</a>
-	<a id="theme-toggle">◑</a>
+	<a id="theme-toggle"><span>◑</span></a>
+	<a id="scroller" href="#top"><span>↑</span></a>
 </div>
 <script type="text/javascript">
 	var themetoggle = document.querySelector('#theme-toggle');
